Se creó con Colab

--- a/Clase3.ipynb
+++ b/Clase3.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPTX7ad+fDP0ya61jw7N2en",
+      "authorship_tag": "ABX9TyO7UYHHV5umie4ShTj9/Xvg",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -134,9 +134,32 @@
     },
     {
       "cell_type": "markdown",
-      "source": [],
+      "source": [
+        "Algoritmo num_medio\n",
+        "\n",
+        "\tDefinir A, B, C Como Entero\n",
+        "\timprimir \"Ingrese los numeros\"\n",
+        "\tLeer A, B, C\n",
+        "\tSi ((A >B) y(A<C)) O((A<B)y(A>C))\n",
+        "\t\timprimir \"El medio es:\", A\n",
+        "\tsino\n",
+        "\t\tSi ((B >A) y(B<C)) O((B<A)y(B>C))\n",
+        "\t\t\timprimir \"El medio es:\", B\n",
+        "\t\tsino\n",
+        "\t\t\timprimir \"El medio es:\", C\n",
+        "\t\tFin si\n",
+        "\tFin si\n",
+        "FinAlgoritmo"
+      ],
       "metadata": {
         "id": "qLJ9ZH-eWXTm"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [],
+      "metadata": {
+        "id": "Pey5nuiEYW1U"
       }
     }
   ]
