--- a/Clase4.ipynb
+++ b/Clase4.ipynb
@@ -141,7 +141,7 @@
         "\n",
         "Hacer Para (cuando se conoce el numero de iteraciones)\n",
         "\n",
-        "Hacer Mientras (cuando se no conoce el numero de iteraciones)\n"
+        "Hacer Mientras (cuando NO se conoce el numero de iteraciones)\n"
       ],
       "metadata": {
         "id": "sT2n1CmVd-D9"
