--- a/Clase5.ipynb
+++ b/Clase5.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMUq2MQeVzQRCuI5vNYyrLU",
+      "authorship_tag": "ABX9TyPv4A0dPsKJ7BlBEcv2K5Hv",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,33 +29,33 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Realizar un programa que, solicite el nombre de un alumno y luego calcule el promedio de sus 3 notas    \n",
+        "**Realizar un programa que, solicite el nombre de un alumno y luego calcule el promedio de sus 3 notas**   \n",
         "      \n",
-        "      Algoritmo sin_titulo\n",
-        "        Definir sum, calif, c Como Entero\n",
-        "        Definir prom Como Real\n",
-        "        Definir nombre como cadena\n",
-        "        \n",
-        "        sum = 0\n",
-        "        \n",
-        "        Escribir \"Igrese el nombre del alumno: \"\n",
-        "        Leer nombre\n",
-        "        \n",
-        "        Para c=1 hasta 3 Hacer\n",
-        "          \n",
-        "          Imprimir \"Ingrese la \" c \"° calificacion:\"\n",
-        "          \n",
-        "          Leer calif\n",
-        "          \n",
-        "          sum = sum + calif\n",
-        "        FinPara\n",
-        "        \n",
-        "        prom = sum/3\n",
-        "        \n",
-        "        Escribir \"El promedio de sus 3 calificaciones es: \" prom\n",
-        "        \n",
-        "        \n",
-        "      FinAlgoritmo\n"
+        "          Algoritmo sin_titulo\n",
+        "            Definir sum, calif, c Como Entero\n",
+        "            Definir prom Como Real\n",
+        "            Definir nombre como cadena\n",
+        "            \n",
+        "            sum = 0\n",
+        "            \n",
+        "            Escribir \"Igrese el nombre del alumno: \"\n",
+        "            Leer nombre\n",
+        "            \n",
+        "            Para c=1 hasta 3 Hacer\n",
+        "              \n",
+        "              Imprimir \"Ingrese la \" c \"° calificacion:\"\n",
+        "              \n",
+        "              Leer calif\n",
+        "              \n",
+        "              sum = sum + calif\n",
+        "            FinPara\n",
+        "            \n",
+        "            prom = sum/3\n",
+        "            \n",
+        "            Escribir \"El promedio de sus 3 calificaciones es: \" prom\n",
+        "            \n",
+        "            \n",
+        "          FinAlgoritmo\n"
       ],
       "metadata": {
         "id": "VA_UtIQhLn6q"
@@ -64,7 +64,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Realizar un ejercicio que introduzca numeros 5 veces, y al final imprima cuantos fueron positivos\n",
+        "**Realizar un ejercicio que introduzca numeros 5 veces, y al final imprima cuantos fueron positivos**\n",
         "\n",
         "      Algoritmo sin_titulo\n",
         "        Definir n, num Como Entero\n",
@@ -93,7 +93,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Suponga que se tiene un conjunto de calificaciones de un grupo de 5 alumnos. Realizar un un algoritmo para calcular la calificacion media y la calificacion mas baja de todo el grupo\n",
+        "**Suponga que se tiene un conjunto de calificaciones de un grupo de 5 alumnos. Realizar un un algoritmo para calcular la calificacion media y la calificacion mas baja de todo el grupo**\n",
         "\n",
         "      Algoritmo sin_titulo\n",
         "        \n",
@@ -131,7 +131,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Simular el comportamiento de un reloj digital, imprimiendo la hora, minutos y segundos de un dia desde las 00:00:00 horas hasta las 23:59:59 horas\n",
+        "**Simular el comportamiento de un reloj digital, imprimiendo la hora, minutos y segundos de un dia desde las 00:00:00 horas hasta las 23:59:59 horas**\n",
         "\n",
         "      Algoritmo sin_titulo\n",
         "        \n",
@@ -154,7 +154,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Calcular el valor de la suma de los 100 primeros numeros naturales\n",
+        "**Calcular el valor de la suma de los 100 primeros numeros naturales**\n",
         "\n",
         "    Algoritmo sin_titulo\n",
         "      Definir suma Como Entero\n",
