--- a/Clase5.ipynb
+++ b/Clase5.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPv4A0dPsKJ7BlBEcv2K5Hv",
+      "authorship_tag": "ABX9TyOT4tDjCFbdfp0uJcj3jei9",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -172,6 +172,47 @@
       ],
       "metadata": {
         "id": "7SiRB7vaV7bG"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# **Banderas o Uso de Banderas en programacion**\n",
+        "\n",
+        "Es una variable auxiliar creada por el programador que generalmente solo toma dos estados (0) cero ó (1) uno\n",
+        "\n",
+        "Normalmente su valor inicial es cero (0) y cuando cambia de estado a uno (1) es para indicar que se ha producido una determinada situacion que debía ser evaluada\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "qI1ebbD2e4fj"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Generar e imprimir en forma automatica todos los numeros primos comprendidos entre dos y mil inclusve\n",
+        "\n",
+        "    Algoritmo Numeros_Primos\n",
+        "      Definir i, C, B Como Entero\n",
+        "      \n",
+        "      Para i = 2 Hasta 1000 Con Paso 1 Hacer\n",
+        "        B = 0\n",
+        "        \n",
+        "        Para C = 2 Hasta Trunc(Raiz(i)) Con Paso 1 Hacer\n",
+        "          Si (i MOD C) = 0 Entonces\n",
+        "            B = 1\n",
+        "          FinSi\n",
+        "        FinPara\n",
+        "        \n",
+        "        Si B = 0 Entonces\n",
+        "          Escribir i\n",
+        "        FinSi\n",
+        "      FinPara\n",
+        "    FinAlgoritmo\n"
+      ],
+      "metadata": {
+        "id": "_ghBzw5flOb9"
       }
     }
   ]
